--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e199ee4
+	base = effd2d4
 	trimbase = 
 	parent = debian/melodic/rosparam_handler
-	previous = 
+	previous = e199ee4
