--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e2e5111
+	base = b8fee92
 	trimbase = 
 	parent = debian/melodic/rosparam_handler
-	previous = 
+	previous = e2e5111
