--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 48c5efd
+	base = 813df04
 	trimbase = 
 	parent = release/melodic/rosparam_handler
-	previous = 
+	previous = 48c5efd
