--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7a2d780
+	base = 5d57763
 	trimbase = 
 	parent = rpm/melodic/rosparam_handler
-	previous = 
+	previous = 7a2d780
